Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .cm-line {
   line-height: 1.1 !important;
 }
